<resources>
    <string name="app_name">Celatum</string>
    <string name="no_bio_features_available">No biometric features available on this device.</string>
    <string name="no_bio_enrolled">No biometrics enrolled.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="item_icon">Item Icon</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="note">Note</string>
    <string name="card">Card</string>
    <string name="key">Key</string>
    <string name="link">Link</string>
    <string name="account">Account</string>
    <string name="no_items">No items</string>
    <string name="add_item">Add</string>
    <string name="edit">Edit</string>
    <string name="delete_item">Deleting Item</string>
    <string name="are_you_sure_delete_item">Are you sure you want to delete this item?</string>
    <string name="use_biometric_to_access_data">Use biometric to access data</string>
    <string name="item_deleted">Item %1$s has been deleted</string>
    <string name="authentication_error">Authentication error: %1$s</string>
    <string name="authentication_failed">Authentication failed</string>
</resources>