<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorBackground"
    android:padding="20dp"
    tools:context=".DetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/item_bg">

        <ImageView
            android:id="@+id/detail_icon"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:contentDescription="@string/item_icon" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="5dp"
            android:text="@string/title" />

        <TextView
            android:id="@+id/detail_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:background="@drawable/textview_bg"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="5dp"
            android:text="@string/description" />

        <TextView
            android:id="@+id/detail_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:background="@drawable/textview_bg"/>

        <TextView
            android:id="@+id/detail_edited"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textAlignment="center"
            android:alpha="0.5"
            android:layout_marginBottom="10dp"/>

        <com.google.android.flexbox.FlexboxLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:justifyContent="space_between">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/detail_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/edit"
                android:backgroundTint="@color/colorButtonBackground"
                android:textColor="@color/colorButton"
                app:layout_constraintEnd_toEndOf="parent" />
        </com.google.android.flexbox.FlexboxLayout>
    </LinearLayout>
</LinearLayout>